Update VQE TASK QOSF.ipynb

--- a/VQE TASK QOSF.ipynb
+++ b/VQE TASK QOSF.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Used a code to calaculate the hamiltonian in the possible pauli tensored basis"
+    "# Used a code to calculate the hamiltonian in the possible pauli tensored basis"
    ]
   },
   {
